# convoke

./: .gitignore  README.md
back-end/: database.js  ecosystem.config.cjs  libs.js  package-lock.json  package.json  system.js  test.js
back-end/design/: music.js  musicPlaylists.js  musicSongs.js  user.js
back-end/libs/: functions.js  music.js  mysql.js  user.js
discordbot/: discordbot.js  index.js  package-lock.json  package.json
discordbotv2/: .gitignore  package.json
discordbotv2/src/: commands.ts  index.ts  voice.ts
front-end/: README.md  angular.json  package-lock.json  package.json
front-end/src/: index.html  styles.scss
front-end/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  toasts.component.ts
front-end/src/environments/: environment.ts
front-endv2/: README.md  angular.json  package-lock.json  package.json
front-endv2/src/: index.html  styles.scss
front-endv2/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
front-endv2/src/environments/: environment.development.ts  environment.local.ts  environment.ts
front-endv2/src/interfaces/: music.ts
rust-wep-api/: Cargo.toml
rust-wep-api/src/: main.rs
rust-wep-api/src/api/: task.rs
scripts/: commitsGet.js  getCharacterData.js  iconDownload.js  itemsGet.js  itemsUpdate.js  libs.js  package-lock.json  package.json  syncTest.js  updateCharacterLeaderboard.js  updateMCLeaderboard.js
scripts/youtube-to-mp3/: index.js  package-lock.json  package.json
(+30 files in other folders)
