[package]
name = "rust-wep-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.20"
mysql_async = "0.32.2"
rand = "0.8.5"
serde = {version = "1.0.190", features = ["derive"]}
strum = "0.25.0"
strum_macros = "0.25.3"
uuid = "1.5.0"
